inclusao e atualizacao de script

--- a/script_executar_notebook_diverso.ipynb
+++ b/script_executar_notebook_diverso.ipynb
@@ -59,10 +59,19 @@
    "source": [
     "# função para executar todas as células do notebook referenciado:\n",
     "def executar_todas_celulas(nb):\n",
-    "    ep.preprocess(nb, {'metadata': {'path': './'}})\n",
-    "    for i, cell in enumerate(nb.cells):\n",
-    "        if cell.cell_type == 'code':\n",
-    "            exec(cell.source)"
+    "    try:\n",
+    "        ep.preprocess(nb, {'metadata': {'path': './'}})\n",
+    "        for i, cell in enumerate(nb.cells):\n",
+    "            if cell.cell_type == 'code':\n",
+    "                try:\n",
+    "                    exec(cell.source)\n",
+    "                except Exception as e:\n",
+    "                    print(f\"Erro na célula {i}: {e}\")\n",
+    "                    return False\n",
+    "    except Exception as e:\n",
+    "        print(f\"Erro ao processar o notebook: {e}\")\n",
+    "        return False\n",
+    "    return True"
    ]
   },
   {
@@ -76,8 +85,10 @@
     "# print('Célula nº __ foi processada.')\n",
     "\n",
     "# executandop todas as células de 'nome_notebook.ipynb':\n",
-    "executar_todas_celulas(nb)\n",
-    "print('Todas as células do \"nome_notebook.ipynb\" foram executadas.')"
+    "if executar_todas_celulas(nb):\n",
+    "    print(\"Todas as células do 'nome_notebook.ipynb' foram executadas.\")\n",
+    "else:\n",
+    "    print(\"Houve um erro durante a execução das células do 'nome_notebook.ipynb'.\")"
    ]
   }
  ],
